--- a/Index.html
+++ b/Index.html
@@ -32,6 +32,12 @@
             transition: all 0.5s ease-in-out;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
             cursor: pointer;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            font-family: 'Courier New', Courier, monospace;
+            color: #ff69b4;
+            font-size: 18px;
         }
 
         .envelope.open {
@@ -197,6 +203,7 @@
 
     <div class="container">
         <div class="envelope">
+            Click Me
             <div class="letter">
                 <h1>Will you be my Valentine?</h1>
                 <a href="penguin.html" class="precious-link">For you 🎁</a>
@@ -213,17 +220,11 @@
     <script>
         const envelope = document.querySelector('.envelope');
         const letter = document.querySelector('.letter');
-        const heart = document.querySelector('.heart-decoration');
 
         // Envelope opening animation
         envelope.addEventListener('click', () => {
             envelope.classList.toggle('open');
             letter.classList.toggle('open');
-        });
-
-        // Heart floating animation trigger
-        heart.addEventListener('animationiteration', () => {
-            heart.style.animation = 'heartbeat 2s infinite, float 3s ease-in-out infinite';
         });
     </script>
 </body>
