--- a/Index.html
+++ b/Index.html
@@ -11,7 +11,7 @@
             justify-content: center;
             align-items: center;
             height: 100vh;
-            background-image: url('https://www.youtube.com/watch?v=a0uu1r7Kj4U&pp=ygUdcm9tYW50aWMgbXVzaWMgZm9yIGxvdmUgbmlnaHQ%3D');
+            background-image: url('https://img.freepik.com/premium-photo/moon-against-bright-night-starry-sky-reflected-sea_180633-732.jpg?semt=ais_hybrid');
             background-size: cover;
             background-position: center;
             background-attachment: fixed;
@@ -197,7 +197,7 @@
 <body>
     <!-- Background Music -->
     <audio autoplay loop>
-        <source src="https://www.bensound.com/bensound-music/bensound-romantic.mp3" type="audio/mp3">
+        <source src="https://www.saregama.com/song/tu-mile-dil-khile_78803">
         Your browser does not support the audio element.
     </audio>
 
