--- a/Index.html
+++ b/Index.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -197,8 +196,8 @@
 <body>
     <!-- Background Music -->
     <audio autoplay loop>
-        <source src="https://www.saregama.com/song/tu-mile-dil-khile_78803">
-        
+        <source src="https://soundcloud.com/inder-kirat/sets/hindi-romantic-songs?utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing" type="audio/mpeg">
+        Your browser does not support the audio element.
     </audio>
 
     <div class="container">
