--- a/Penguin.html
+++ b/Penguin.html
@@ -36,15 +36,15 @@
 </head>
 <body>
     <h1>Will You Be My Penguin?</h1>
-    <img class="penguin" "https://upload.wikimedia.org/wikipedia/commons/thumb/a/a3/Aptenodytes_forsteri_-Snow_Hill_Island%2C_Antarctica_-adults_and_juvenile-8.jpg/640px-Aptenodytes_forsteri_-Snow_Hill_Island%2C_Antarctica_-adults_and_juvenile-8.jpg" alt="Penguin Image">
-    <div class="heart" onclick="showMessage()">❤️</div>
-    <div class="message" id="message"></div>
+<img class="penguin" src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a3/Aptenodytes_forsteri_-Snow_Hill_Island%2C_Antarctica_-adults_and_juvenile-8.jpg/640px-Aptenodytes_forsteri_-Snow_Hill_Island%2C_Antarctica_-adults_and_juvenile-8.jpg" alt="Penguin Image">
+<div class="heart" onclick="showMessage()">❤️</div>
+<div class="message" id="message"></div>
 
-    <script>
-        function showMessage() {
-            const messageDiv = document.getElementById('message');
-            messageDiv.innerText = "You make my heart flap like a penguin!";
-        }
-    </script>
+<script>
+    function showMessage() {
+        const messageDiv = document.getElementById('message');
+        messageDiv.innerText = "You make my heart flap like a penguin!";
+    }
+</script>
 </body>
 </html>
