--- a/Index.html
+++ b/Index.html
@@ -196,7 +196,9 @@
 <body>
     <!-- Background Music -->
     <audio autoplay loop>
-        <source src="https://soundcloud.com/inder-kirat/sets/hindi-romantic-songs?utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing" type="audio/mpeg">
+        <source src="
+li.sten.to/4dlu25bs
+" type="audio/mpeg">
         Your browser does not support the audio element.
     </audio>
 
