--- a/Penguin.html
+++ b/Penguin.html
@@ -35,9 +35,13 @@
     </style>
 </head>
 <body>
-    <h1>Will You Be My Penguin?</h1>
+   </style>
+
+<h1>Will You Be My Penguin?</h1>
 <img class="penguin" src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a3/Aptenodytes_forsteri_-Snow_Hill_Island%2C_Antarctica_-adults_and_juvenile-8.jpg/640px-Aptenodytes_forsteri_-Snow_Hill_Island%2C_Antarctica_-adults_and_juvenile-8.jpg" alt="Penguin Image">
-<div class="heart" onclick="showMessage()">❤️</div>
+<div class="heart" onclick="showMessage()">❤️
+    <span class="tooltip">Click me!</span>
+</div>
 <div class="message" id="message"></div>
 
 <script>
