--- a/Index.html
+++ b/Index.html
@@ -196,11 +196,9 @@
 <body>
     <!-- Background Music -->
     <audio autoplay loop>
-        <source src="
-li.sten.to/4dlu25bs
-" type="audio/mpeg">
-        Your browser does not support the audio element.
-    </audio>
+    <source src="https://li.sten.to/4dlu25bs" type="audio/mpeg">
+    Your browser does not support the audio element.
+</audio>
 
     <div class="container">
         <div class="envelope">
