--- a/Index.html
+++ b/Index.html
@@ -1,212 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Be My Valentine</title>
-    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&family=Lobster&family=Pacifico&display=swap" rel="stylesheet">
-    <style>
-        :root {
-            --primary-color: #ff69b4;
-            --secondary-color: #ff1493;
-            --accent-color: #ffb6c1;
-        }
 
-        body {
-            margin: 0;
-            padding: 0;
-            animation: backgroundChange 15s infinite;
-        }
-
-        @keyframes backgroundChange {
-            0% { background-color: #ffebee; }
-            25% { background-color: #fce4ec; }
-            50% { background-color: #f3e5f5; }
-            75% { background-color: #e8eaf6; }
-            100% { background-color: #ffebee; }
-        }
-
-        .container {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)),
-                url('https://img.freepik.com/premium-photo/moon-against-bright-night-starry-sky-reflected-sea_180633-732.jpg?semt=ais_hybrid');
-            background-size: cover;
-            background-position: center;
-            background-attachment: fixed;
-            background-repeat: no-repeat;
-            position: relative;
-            overflow: hidden;
-        }
-
-        .envelope {
-            width: 350px;
-            height: 350px;
-            background: linear-gradient(45deg, var(--accent-color), #fff);
-            border: 2px solid var(--primary-color);
-            clip-path: polygon(50% 0%, 100% 38%, 82% 100%, 18% 100%, 0% 38%);
-            position: relative;
-            overflow: hidden;
-            transition: all 0.8s ease-in-out;
-            box-shadow: 0 0 20px rgba(255, 182, 193, 0.5);
-            cursor: pointer;
-            animation: envelopeGlow 3s infinite;
-        }
-
-        @keyframes envelopeGlow {
-            0% { box-shadow: 0 0 20px rgba(255, 105, 180, 0.5); }
-            50% { box-shadow: 0 0 40px rgba(255, 20, 147, 0.8); }
-            100% { box-shadow: 0 0 20px rgba(255, 105, 180, 0.5); }
-        }
-
-        .envelope:hover {
-            transform: scale(1.05) rotate(2deg);
-            background: linear-gradient(45deg, #ff69b4, #ff1493);
-        }
-
-        .letter {
-            width: 85%;
-            height: 85%;
-            background: linear-gradient(135deg, #fff, #fff5f5);
-            padding: 20px;
-            margin: 20px auto;
-            border: 2px solid var(--primary-color);
-            border-radius: 15px;
-            box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%) scale(0);
-            transition: all 0.8s ease-in-out;
-            opacity: 0;
-        }
-
-        .envelope.open .letter {
-            transform: translate(-50%, -50%) scale(1);
-            opacity: 1;
-            animation: letterColorChange 5s infinite;
-        }
-
-        .letter-content {
-            font-family: 'Dancing Script', cursive;
-            font-size: 1.2em;
-            color: var(--secondary-color);
-            text-align: center;
-            line-height: 1.6;
-            margin: 20px 0;
-        }
-
-        @keyframes letterColorChange {
-            0% { border-color: #ff69b4; }
-            25% { border-color: #ff1493; }
-            50% { border-color: #ff4081; }
-            75% { border-color: #ec407a; }
-            100% { border-color: #ff69b4; }
-        }
-
-        .letter h1 {
-            font-family: 'Dancing Script', cursive;
-            background: linear-gradient(45deg, #ff69b4, #ff1493);
-            -webkit-background-clip: text;
-            -webkit-text-fill-color: transparent;
-            text-align: center;
-            font-size: 2.5em;
-            margin-bottom: 20px;
-            animation: titleGlow 2s infinite;
-        }
-
-        .precious-link {
-            display: inline-block;
-            text-align: center;
-            font-family: 'Pacifico', cursive;
-            color: var(--primary-color);
-            text-decoration: none;
-            font-size: 1.5em;
-            margin: 20px 0;
-            padding: 10px 20px;
-            border: 2px solid var(--primary-color);
-            border-radius: 25px;
-            transition: all 0.3s ease;
-            background: linear-gradient(45deg, var(--primary-color), var(--secondary-color));
-            -webkit-background-clip: text;
-            -webkit-text-fill-color: transparent;
-            position: relative;
-            overflow: hidden;
-        }
-
-        .precious-link:hover {
-            transform: scale(1.1);
-            border-color: var(--secondary-color);
-            animation: linkGlow 1s infinite;
-        }
-
-        .background-quote {
-            position: absolute;
-            bottom: 20px;
-            left: 50%;
-            transform: translateX(-50%);
-            font-family: 'Lobster', cursive;
-            color: #fff;
-            text-align: center;
-            padding: 10px 20px;
-            border-radius: 10px;
-            background: rgba(0, 0, 0, 0.5);
-            animation: quoteGlow 3s infinite;
-        }
-
-        @keyframes quoteGlow {
-            0% { text-shadow: 0 0 10px #fff; }
-            50% { text-shadow: 0 0 20px #ff69b4; }
-            100% { text-shadow: 0 0 10px #fff; }
-        }
-
-        .floating-hearts {
-            position: absolute;
-            width: 100%;
-            height: 100%;
-            pointer-events: none;
-        }
-
-        .heart {
-            position: absolute;
-            font-size: 25px;
-            animation: floatingHeart 6s linear infinite, heartColorChange 2s infinite;
-        }
-
-        @keyframes floatingHeart {
-            0% {
-                transform: translateY(100vh) translateX(0) rotate(0deg);
-                opacity: 1;
-            }
-            100% {
-                transform: translateY(-100vh) translateX(100px) rotate(360deg);
-                opacity: 0;
-            }
-        }
-    </style>
-</head>
-<body>
-    <audio id="bgMusic" loop>
-        <source src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-1.mp3" type="audio/mp3">
-    </audio>
-
-    <div class="container">
-        <div class="floating-hearts"></div>
-        
-
-Estimated query cost:
-$0.0476 USD
-–
-
-Harita DaduHD
-Harita Dadu
-–
- 2m ago
-Here's the enhanced version with interactive and dynamic colors:
-
-```html
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -379,6 +171,17 @@ Here's the enhanced version with interactive and dynamic colors:
             animation: floatingHeart 6s linear infinite, heartColorChange 2s infinite;
         }
 
+        @keyframes floatingHeart {
+            0% {
+                transform: translateY(100vh) translateX(0) rotate(0deg);
+                opacity: 1;
+            }
+            100% {
+                transform: translateY(-100vh) translateX(100px) rotate(360deg);
+                opacity: 0;
+            }
+        }
+
         @keyframes heartColorChange {
             0% { color: #ff69b4; }
             33% { color: #ff1493; }
@@ -395,17 +198,11 @@ Here's the enhanced version with interactive and dynamic colors:
 
         @keyframes quoteColor {
             0% { color: #fff; }
-            50% { color: #ffe6f2    complete the code add the end tags
-Claude 3.5 Sonnet v2
-Claude 3.5 Sonnet v2
-–
- 1m ago
-Here's the complete code with all the necessary end tags and content:
-
-<!DOCTYPE html>
-<html lang="en">
-<!-- Previous head and style sections remain the same -->
-
+            50% { color: #ffe6f2; }
+            100% { color: #fff; }
+        }
+    </style>
+</head>
 <body>
     <audio id="bgMusic" loop>
         <source src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-1.mp3" type="audio/mp3">
@@ -424,9 +221,8 @@ Here's the complete code with all the necessary end tags and content:
                     <p>Forever yours,<br>❤️</p>
                 </div>
                 <a href="#" class="precious-link">Open Your Special Gift 🎁</a>
-                <div class="penguin-image"></div>
+                <div class="heart-decoration">❤️</div>
             </div>
-            <div class="heart-decoration">❤️</div>
         </div>
         <div class="background-quote">
             "In all the world, there is no heart for me like yours.<br>
