--- a/Index.html
+++ b/Index.html
@@ -7,6 +7,7 @@
     <title>Be My Valentine</title>
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&family=Lobster&family=Pacifico&display=swap" rel="stylesheet">
     <style>
+        /* All previous styles remain the same... */
         :root {
             --primary-color: #ff69b4;
             --secondary-color: #ff1493;
@@ -146,23 +147,11 @@
             100% { box-shadow: 0 0 10px var(--primary-color); }
         }
 
-        .heart-decoration {
-            width: 30px;
-            height: 30px;
-            position: absolute;
-            animation: heartColor 2s infinite;
-        }
-
-        @keyframes heartColor {
-            0% { color: #ff69b4; }
-            50% { color: #ff1493; }
-            100% { color: #ff69b4; }
-        }
-
         .floating-hearts {
             position: absolute;
             width: 100%;
             height: 100%;
+            pointer-events: none;
         }
 
         .heart {
@@ -172,35 +161,30 @@
         }
 
         @keyframes floatingHeart {
-            0% {
-                transform: translateY(100vh) translateX(0) rotate(0deg);
-                opacity: 1;
-            }
-            100% {
-                transform: translateY(-100vh) translateX(100px) rotate(360deg);
-                opacity: 0;
-            }
-        }
-
-        @keyframes heartColorChange {
-            0% { color: #ff69b4; }
-            33% { color: #ff1493; }
-            66% { color: #ff4081; }
-            100% { color: #ff69b4; }
+            0% { transform: translateY(100vh) translateX(0) rotate(0deg); opacity: 1; }
+            100% { transform: translateY(-100vh) translateX(100px) rotate(360deg); opacity: 0; }
         }
 
         .background-quote {
+            position: absolute;
+            bottom: 20px;
+            left: 50%;
+            transform: translateX(-50%);
             font-family: 'Lobster', cursive;
             color: #fff;
-            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
-            animation: quoteColor 5s infinite;
+            text-align: center;
+            padding: 10px 20px;
+            border-radius: 10px;
+            background: rgba(0, 0, 0, 0.5);
+            animation: quoteGlow 3s infinite;
         }
 
-        @keyframes quoteColor {
-            0% { color: #fff; }
-            50% { color: #ffe6f2; }
-            100% { color: #fff; }
+        @keyframes quoteGlow {
+            0% { text-shadow: 0 0 10px #fff; }
+            50% { text-shadow: 0 0 20px #ff69b4; }
+            100% { text-shadow: 0 0 10px #fff; }
         }
+
     </style>
 </head>
 <body>
@@ -220,8 +204,8 @@
                        Would you make my day special by being my Valentine?</p>
                     <p>Forever yours,<br>❤️</p>
                 </div>
-                <a href="#" class="precious-link">Open Your Special Gift 🎁</a>
-                <div class="heart-decoration">❤️</div>
+                <a href="penguin.html" class="precious-link">Open Your Special Gift 🎁</a>
+                <button id="clickMeBtn" class="precious-link">Click Me</button>
             </div>
         </div>
         <div class="background-quote">
@@ -242,6 +226,11 @@
             envelope.classList.toggle('open');
         });
 
+        // "Click Me" button action
+        document.getElementById('clickMeBtn').addEventListener('click', () => {
+            window.location.href = 'penguin.html'; // Navigate to the penguin page
+        });
+
         // Create floating hearts
         function createHeart() {
             const heart = document.createElement('div');
@@ -259,26 +248,6 @@
 
         // Create hearts at intervals
         setInterval(createHeart, 300);
-
-        // Color changing animation for elements
-        function changeColors() {
-            const root = document.documentElement;
-            const colors = [
-                '#ff69b4',
-                '#ff1493',
-                '#ff4081',
-                '#ec407a'
-            ];
-            let colorIndex = 0;
-
-            setInterval(() => {
-                colorIndex = (colorIndex + 1) % colors.length;
-                root.style.setProperty('--primary-color', colors[colorIndex]);
-            }, 2000);
-        }
-
-        // Start color changing animation
-        changeColors();
     </script>
 </body>
 </html>
