--- a/Index.html
+++ b/Index.html
@@ -246,7 +246,8 @@
                     <p>Every moment with you makes my heart flutter,<br>
                        Like stars dancing in the night sky.<br>
                        Would you make my day special by being my Valentine?</p>
-                    <p>Forever yours,<br>❤️</p>
+                    <a href="penguin.html" class="precious-link">For you 🎁</a>
+                <div class="penguin-image"></div>
                 </div>
                 <!-- The link to penguin.html -->
                 <a href="penguin.html" class="precious-link">Open Your Special Gift 🎁</a>
