--- a/Index.html
+++ b/Index.html
@@ -38,7 +38,7 @@
         .envelope {
             width: 350px;
             height: 350px;
-            background: linear-gradient(45deg, var(--accent-color), #fff);
+            background: rgba(255, 182, 193, 0.8); /* Opaque background */
             border: 2px solid var(--primary-color);
             clip-path: polygon(50% 0%, 100% 38%, 82% 100%, 18% 100%, 0% 38%);
             position: relative;
